PROD-12-18-19/force-app/main/default/objects/Meeting_Request__c/Meeting_Request__c.object-meta.xml
<CustomObject>
    <description>Submit a request to Investment Team/Portfolio Managers for a client meeting.</description>
    <label>Meeting Request</label>
    <nameField>
        <displayFormat>Meeting Request-{0000}</displayFormat>
        <label>Meeting Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meeting Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>