PROD-12-18-19/force-app/main/default/objects/Meeting_Request__c/fields/BIM_AUM__c.field-meta.xml
<CustomField>
    <fullName>BIM_AUM__c</fullName>
    <description>Pulled from the Account</description>
    <formula>Opportunity__r.Account.BIM_Total_AUM__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Pulled from the Account</inlineHelpText>
    <label>PSG AUM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>