PROD-12-18-19/force-app/main/default/objects/Meeting_Request__c/fields/Client_or_Prospect__c.field-meta.xml
<CustomField>
    <fullName>Client_or_Prospect__c</fullName>
    <description>Pulled from the Account PSG Relationship Type</description>
    <formula>CASE(Opportunity__r.Account.PSG_Relationship_Type__c,
&quot;Client&quot;, &quot;Client&quot;,
&quot;Former Client&quot;, &quot;Former Client&quot;, 
&quot;Prospect&quot;)</formula>
    <inlineHelpText>Pulled from the Account PSG Relationship Type</inlineHelpText>
    <label>Client or Prospect</label>
    <type>Text</type>
</CustomField>