PROD-12-18-19/force-app/main/default/objects/Meeting_Request__c/fields/Communication_of_details_to_Client__c.field-meta.xml
<CustomField>
    <fullName>Communication_of_details_to_Client__c</fullName>
    <description>Who will communicate the logistical details of the meeting with the client</description>
    <inlineHelpText>Who will communicate the logistical details of the meeting with the client</inlineHelpText>
    <label>Communication of details to Client</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client Service Rep</fullName>
            </value>
            <value>
                <fullName>Administrative team</fullName>
            </value>
            <value>
                <fullName>Relationship Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>