PROD-12-18-19/force-app/main/default/objects/Meeting_Request__c/fields/Data_as_of_Date__c.field-meta.xml
<CustomField>
    <fullName>Data_as_of_Date__c</fullName>
    <label>Data as of Date</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Most recent available</fullName>
            </value>
            <value>
                <fullName>Most recent month</fullName>
            </value>
            <value>
                <fullName>Most recent quarter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>