PROD-12-18-19/force-app/main/default/objects/Meeting_Request__c/fields/Duration_of_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Duration_of_Meeting__c</fullName>
    <description>the length of time, in minutes, required for the meeting.</description>
    <inlineHelpText>the length of time, in minutes, required for the meeting.</inlineHelpText>
    <label>Duration of Meeting (minutes)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>