PROD-12-18-19/force-app/main/default/objects/Meeting_Request__c/fields/Final_Date_and_Time_of_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Final_Date_and_Time_of_Meeting__c</fullName>
    <description>Select the final date and time of meeting</description>
    <inlineHelpText>Select the final date and time of meeting</inlineHelpText>
    <label>Final Date and Time of Meeting</label>
    <type>DateTime</type>
</CustomField>