PROD-12-18-19/force-app/main/default/objects/Meeting_Request__c/fields/Final_Date_and_Time_of_Meeting_End__c.field-meta.xml
<CustomField>
    <fullName>Final_Date_and_Time_of_Meeting_End__c</fullName>
    <description>enter in the end time for final date and time</description>
    <inlineHelpText>enter in the end time for final date and time</inlineHelpText>
    <label>Final Date and Time of Meeting - End</label>
    <type>DateTime</type>
</CustomField>