PROD-12-18-19/force-app/main/default/objects/Meeting_Request__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>the location of the meeting. Will map to the event once the date has been finalized</description>
    <inlineHelpText>the location of the meeting. Will map to the event once the date has been finalized</inlineHelpText>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Conference Call</fullName>
            </value>
            <value>
                <fullName>Onsite: Chicago</fullName>
            </value>
            <value>
                <fullName>Onsite: New York</fullName>
            </value>
            <value>
                <fullName>Onsite: Boston</fullName>
            </value>
            <value>
                <fullName>Onsite: Toronto</fullName>
            </value>
            <value>
                <fullName>Offsite</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>