PROD-12-18-19/force-app/main/default/objects/Meeting_Request__c/fields/Materials_Required__c.field-meta.xml
<CustomField>
    <fullName>Materials_Required__c</fullName>
    <description>Please select the Materials you will need for the meeting</description>
    <inlineHelpText>Please select the Materials you will need for the meeting</inlineHelpText>
    <label>Materials Required</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client Update Book</fullName>
            </value>
            <value>
                <fullName>Standard Pitch Book</fullName>
            </value>
            <value>
                <fullName>Custom Pitch Book</fullName>
            </value>
            <value>
                <fullName>Operational Due Diligence Pitch Book</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>