PROD-12-18-19/force-app/main/default/objects/Meeting_Request__c/fields/Opportunity_3__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If there is an additional Opportunity to discuss, please list it</description>
    <inlineHelpText>If there is an additional Opportunity to discuss, please list it</inlineHelpText>
    <label>Opportunity 3</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Meeting Requests (Opportunity 3)</relationshipLabel>
    <relationshipName>Meeting_Requests2</relationshipName>
    <type>Lookup</type>
</CustomField>