PROD-12-18-19/force-app/main/default/objects/Meeting_Request__c/fields/Opportunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Stage__c</fullName>
    <description>Pulls the stage of the Stage of the Opportunity</description>
    <formula>Text(Opportunity__r.StageName)</formula>
    <inlineHelpText>Pulls the stage of the Stage of the Opportunity</inlineHelpText>
    <label>Opportunity Stage</label>
    <type>Text</type>
</CustomField>