PROD-12-18-19/force-app/main/default/objects/Meeting_Request__c/fields/PSG_Primary_Marketing_Rep__c.field-meta.xml
<CustomField>
    <fullName>PSG_Primary_Marketing_Rep__c</fullName>
    <description>Pulled from the Account</description>
    <formula>Opportunity__r.Owner.Full_name__c</formula>
    <inlineHelpText>Pulled from the Account</inlineHelpText>
    <label>Primary Marketing Rep</label>
    <type>Text</type>
</CustomField>