PROD-12-18-19/force-app/main/default/objects/Meeting_Request__c/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Meeting Only</fullName>
            </value>
            <value>
                <fullName>Meeting + Materials</fullName>
            </value>
            <value>
                <fullName>Materials Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>