PROD-12-18-19/force-app/main/default/objects/Meeting_Request__c/fields/Requested_Date_and_Times__c.field-meta.xml
<CustomField>
    <fullName>Requested_Date_and_Times__c</fullName>
    <description>a list of requested date and times for the meeting</description>
    <inlineHelpText>a list of requested date and times for the meeting</inlineHelpText>
    <label>Requested Date and Times</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>