PROD-12-18-19/force-app/main/default/objects/Meeting_Request__c/validationRules/Mandatory_if_Other_is_selected.validationRule-meta.xml
<ValidationRule>
    <fullName>Mandatory_if_Other_is_selected</fullName>
    <active>true</active>
    <errorConditionFormula>INCLUDES( Materials_Required__c , &quot;Other&quot;)&amp;&amp;
 ISBLANK( Other_Materials_Needed__c )</errorConditionFormula>
    <errorDisplayField>Other_Materials_Needed__c</errorDisplayField>
    <errorMessage>Please provided details of the other materials you require.</errorMessage>
</ValidationRule>