PROD-12-18-19/force-app/main/default/objects/Meeting_Request__c/listViews/Copy_of_All.listView-meta.xml
<ListView>
    <fullName>Copy_of_All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>Subject__c</columns>
    <columns>Client_Name__c</columns>
    <columns>Final_Date_and_Time_of_Meeting__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Materials_Required__c</field>
        <operation>equals</operation>
    </filters>
    <label>Materials Not Required</label>
    <sharedTo>
        <role>BIM</role>
        <role>BIM_Exec</role>
    </sharedTo>
</ListView>